pavo 1.1.1
------------------------------------------------------------------------------

MINOR FEATURES AND BUG FIXES:
* added more informative labels for the segment analysis plot

pavo 1.1
------------------------------------------------------------------------------
MAJOR CHANGES:

NEW FUNCTIONS:
* segspace() replaces the deprecated segclass(), and is accessed via the colspace() argument space = 'segment'. The results of segspace() 
are also now compatible with coldist() for the estimation of Euclidean colour-distances.
* segplot() is a plot for Endler's (1990) segment analysis, and is accessed — along with all other 2d plots — via plot.colspace()

MINOR FEATURES AND BUG FIXES:

* the use of relative quantum catches is now optional in the categorical colorspace (though still produces a warning), for greater flexibility 
* updated several functions to work when rspec object has only one spectrum
* fixed bug in voloverlap where interactive plots would result in error
* fixed incorrect labels in the maxwell triangle plot
* fixed a bug in as.rspec() in which lim was not applied when interpolate = FALSE
* fixed bug in aggplot() which resulted in error when using lty, lwd arguments
* warning if ocular media is being used in both vismodel() and sensmodel()
* added an 'all' option to the achromatic argument in vismodel()
* added the ability to calculate dL for cielab models in coldist()
* added some more informative messages and warnings

pavo 1.0
------------------------------------------------------------------------------
* See vignette for detailed description of changes.

MAJOR CHANGES: