@@ -1,12 +1,12 @@
 #' CIE colour spaces
 #' 
 #' Calculates coordinates and colorimetric variables that represent reflectance spectra
-#' in either the CIEXYZ (1931) or CIELAB (1971) colourspaces.  
+#' in either the CIEXYZ (1931), CIELAB (1971), or CIELCH (1971) colourspaces.  
 #' 
 #' @param vismodeldata (required) quantum catch color data. Can be either the result
 #'  from \code{\link{vismodel}} or independently calculated data (in the form of a 
 #'  data frame with three columns representing trichromatic viewer).
-#' @param space (required) Choice between XYZ (1931) or LAB (1971) colour models.
+#' @param space (required) Choice between XYZ (1931), LAB (1971), or LCH colour models.
 #' 
 #' @return Object of class \code{colspace} containing:
 #'    \itemize{
@@ -15,6 +15,10 @@
 #'      \item \code{L, a, b}: Lightness, \code{L}, and colour-opponent \code{a} 
 #'          (redness-greenness) and \code{b} (yellowness-blueness) values, in a 
 #'          Cartesian coordinate space. Returned when using \code{space = LAB}.
+#'      \item \code{L, C, h}: Lightness, \code{L}, chroma \code{C} 
+#'          and hue-angle \code{h} (degrees), the latter of which are cylindrical 
+#'          representations of \code{a} and \code{b} from the CIELAB model. Returned 
+#'          when using \code{space = LCh}.
 #'    }
 #' 
 #' @examples
@@ -23,6 +27,7 @@
 #' vis.flowers <- vismodel(flowers, visual = 'cie10', illum = 'D65')
 #' flowers.ciexyz <- colspace(vis.flowers, space = 'ciexyz')
 #' flowers.cielab <- colspace(vis.flowers, space = 'cielab')
+#' flowers.cielch <- colspace(vis.flowers, space = 'cielch')
 #' }
 #' 
 #' @author Thomas White \email{thomas.white026@@gmail.com}
@@ -42,7 +47,7 @@
 #'  Parts 1 and 2. Technical Report 170-1. Vienna: Central Bureau of the Commission 
 #'  Internationale de l Eclairage.
 
-cie <- function(vismodeldata, space = c('XYZ', 'LAB')){
+cie <- function(vismodeldata, space = c('XYZ', 'LAB', 'LCh')){
   
   space2 <- try(match.arg(space), silent = T)
   if(inherits(space2,'try-error'))
@@ -59,7 +64,7 @@ cie <- function(vismodeldata, space = c('XYZ', 'LAB')){
     x <- X / (X + Y + Z)
     y <- Y / (X + Y + Z)
     z <- Z / (X + Y + Z)
-  }else if(space == 'LAB'){
+  }else if(space == 'LAB' | space == 'LCh'){
     
     # Calculate tristimulus values for neutral point. First need to 
     # re-grab original sensitivity and illuminant data.
@@ -68,6 +73,9 @@ cie <- function(vismodeldata, space = c('XYZ', 'LAB')){
     Xn = sum(rep(1, 401) * S[, 1] * illum)
     Yn = sum(rep(1, 401) * S[, 2] * illum)
     Zn = sum(rep(1, 401) * S[, 3] * illum)
+    # Xn = 94.811
+    # Yn = 100
+    # Zn = 107.304
     
     # LAB calculator
     f <- function(x){
@@ -83,16 +91,21 @@ cie <- function(vismodeldata, space = c('XYZ', 'LAB')){
       L  <- 903.3*(Y/Yn)
     a <- 500 * (f(X/Xn) - f(Y/Yn))
     b <- 200 * (f(Y/Yn) - f(Z/Zn))
+    
+    # LCh calculator
+    #if(atan(b/a) >= 0)
+    C <- sqrt(a^2 + b^2)
+    #else
+    # h <-  (atan(b/a) * (180/pi)) + 360
+    h <- atan(b/a) * (180/pi)
   }
-  
-  # todo: for CIELCh space 
-  #model$C_ab <- sqrt(model$a^2 + model$b^2)
-  #model$h_ab <-  atan(model$b/model$a)*(180/pi)
-  
+
   if(space == 'XYZ')
      res.p <- data.frame(X, Y, Z, x, y, z, row.names = rownames(dat))
   else if(space == 'LAB')
     res.p <- data.frame(X, Y, Z, L, a, b, row.names = rownames(dat))
+  else if(space == 'LCh')
+    res.p <- data.frame(X, Y, Z, L, C, h, row.names = rownames(dat))
   
   res <- res.p
   
