@@ -33,7 +33,7 @@
 #'  the Pekin robin \emph{Leiothrix lutea} densities: \code{c(1,2,2,4)}). 
 #'  Ignored for \code{colspace} objects
 #'  if model is not a receptor noise model (i.e. hexagon, colour-opponent-coding, 
-#'  categorical, and cielab models).
+#'  categorical, and cie models).
 #' @param weber The Weber fraction to be used. The noise-to-signal ratio \code{v} is unknown, 
 #'  and therefore must be calculated based on the epirically estimated Weber 
 #'  fraction of one of the cone classes. \code{v} is then applied to estimate the 
@@ -41,19 +41,19 @@
 #'  (the empirically estimated value for the
 #'  LWS cone from \emph{Leiothrix lutea}). Ignored for \code{colspace} objects
 #'  if model is not a receptor noise model (i.e. hexagon, colour-opponent-coding, 
-#'  categorical, segment, and cielab models).
+#'  categorical, segment, and cie models).
 #' @param weber.ref the cone class used to obtain the empirical estimate of the 
 #'  Weber fraction used for the \code{weber} argument. By default, \code{n4} is used, 
 #'  representing the LWS cone for \emph{Leiothrix lutea}. Ignored for \code{colspace} objects
 #'  if model is not a receptor noise model (i.e. hexagon, colour-opponent-coding, 
-#' categorical, segment, and cielab models).
+#' categorical, segment, and cie models).
 #' @param weber.achro the Weber fraction to be used to calculate achromatic contrast, when 
 #'  \code{achro = TRUE}. Defaults to 0.1. Ignored for \code{colspace} objects
 #'  if model is not a receptor noise model (i.e. hexagon, colour-opponent-coding, 
-#' categorical, segment, and cielab models).
+#' categorical, segment, and cie models).
 #' @param noise how the noise will be calculated. (Ignored for \code{colspace} objects
 #'  if model is not a receptor noise model (i.e. hexagon, colour-opponent-coding, 
-#' categorical, segment, and cielab models)):
+#' categorical, segment, and cie models)):
 #' \itemize{
 #' 	\item \code{neural}: noise is proportional to the Weber fraction and 
 #'  is independent of the intensity of the signal received (i.e. assumes bright conditions).
