@@ -5,7 +5,7 @@
 \title{Model spectra in a colorspace}
 \usage{
 colspace(vismodeldata, space = c("auto", "di", "tri", "tcs", "hexagon", "coc",
-  "categorical", "ciexyz", "cielab", "segment"))
+  "categorical", "ciexyz", "cielab", "cielch", "segment"))
 }
 \arguments{
 \item{vismodeldata}{(required) quantum catch color data. Can be either the result
@@ -27,6 +27,7 @@ with columns representing quantum catches).}
    \item \code{categorical}: the tetrachromatic categorical fly-model of Troje (1993). See \code{\link{categorical}} for details. (\link[=catplot]{plotting arguments})
    \item \code{ciexyz}: CIEXYZ space. See \code{\link{cie}} for details. (\link[=cieplot]{plotting arguments})
    \item \code{cielab}: CIELAB space. See \code{\link{cie}} for details. (\link[=cieplot]{plotting arguments})
+   \item \code{cielch}: CIELCh space. See \code{\link{cie}} for details. (\link[=cieplot]{plotting arguments})
    \item \code{segment}: segment analysis of Endler (1990). See \code{\link{segspace}} for details. (\link[=segplot]{plotting arguments})
 }}
 }
